# qBittorrent

./: configure  configure.ac
.github/workflows/: ci_windows.yaml
src/: CMakeLists.txt  main.cpp  src.pro
src/app/: CMakeLists.txt  app.pri  application.cpp  application.h  applicationimpl.cpp  applicationimpl.h  applicationinstancemanager.h  main.cpp
src/base/: CMakeLists.txt  application.cpp  application.h  applicationcomponent.cpp  applicationcomponent.h  applicationinstancemanager.cpp  base.pri  basedefs.h  cmdoptions.cpp  cmdoptions.h  htmlparser.cpp  htmlparser.h  iconprovider.cpp  iconprovider.h  preferences.cpp  preferences.h  preferencesbase.cpp  preferencesbase.h  profile.cpp  profile.h  qbittorrent.cpp  qbittorrent.h  qbittorrentimpl.cpp  qbittorrentimpl.h  searchengine.cpp  searchengine.h  settingsstorage.cpp  shareddatapointer.h  torrentfileswatcher.cpp  torrentfilter.cpp  version.h.in
src/base/bittorrent/: abstractfilestorage.cpp  abstractfilestorage.h  bencoderesumedatastorage.cpp  bittorrentdefs.h  dbresumedatastorage.cpp  dbresumedatastorage.h  loadtorrentparams.h  peerinfo.cpp  resumedatastorage.cpp  resumedatastorage.h  session.cpp  session.h  torrent.cpp  torrent.h  torrentcontenthandler.h  torrentdata.cpp  torrentdata.h  torrenthandle.cpp  torrentimpl.cpp  torrentimpl.h
src/base/bittorrent/private/: portforwarderimpl.cpp  portforwarderimpl.h
src/base/http/: types.h
src/base/net/: dnsupdater.cpp  downloadhandler.cpp  downloadhandler.h  downloadmanager.cpp  downloadmanager.h  geoipmanager.cpp  portforwarder.h  proxytype.h
src/base/rss/: rss_article.cpp  rss_article.h  rss_autodownloader.cpp  rss_autodownloader.h  rss_autodownloadrule.cpp  rss_feed.h  rss_folder.cpp  rss_item.cpp  rss_item.h  rss_manager.cpp  rss_manager.h  rss_session.cpp  rss_session.h  rssfeed.cpp
src/base/rss/private/: rss_feedimpl.cpp  rss_feedimpl.h  rss_parser.cpp  rss_parser.h  rss_session.cpp  rss_session.h
src/base/search/: search.qrc  searchengine.cpp  searchengine.h  searchhandler.cpp  searchpluginmanager.cpp  searchpluginmanager.h
src/base/search/plugins/search/: btdigg.lua  demonoid.lua  extratorrent.lua  kickasstorrents.lua  legittorrents.lua  mininova.lua  piratebay.lua  torlock.lua  torrentreactor.lua  torrentz.lua  versions.txt
src/base/search/private/: luafunctions.cpp  luafunctions.h  luastate.cpp  luastate.h  searchworker.cpp  searchworker.h
src/base/utils/: fs.cpp  fs.h  json.h  misc.cpp  misc.h  sql.cpp  sql.h  string.cpp  string.h
src/gui/: CMakeLists.txt  addnewtorrentdialog.cpp  addnewtorrentdialog.h  advancedsettings.cpp  advancedsettings.h  categoryfiltermodel.cpp  categoryfiltermodel.h  gui.pri  guiapplication.cpp  guiapplication.h  guiapplicationcomponent.cpp  guiapplicationcomponent.h  guiiconprovider.cpp  guiiconprovider.h  mainwindow.cpp  mainwindow.h  optionsdialog.cpp  optionsdialog.h  programupdater.cpp  qbittorrentguiimpl.cpp  qbittorrentguiimpl.h  shutdownconfirmdialog.cpp  shutdownconfirmdialog.h  tagfiltermodel.cpp  torrentcontentfiltermodel.cpp  torrentcontentfiltermodel.h  torrentcontentmodel.cpp  torrentcontentmodel.h  torrentcontentmodelfile.cpp  torrentcontentmodelfile.h  torrentcontentmodelfolder.cpp  torrentcontentmodelfolder.h  torrentcontentmodelitem.cpp  torrentcontentmodelitem.h  torrentcontenttreeview.cpp  torrentcontenttreeview.h  torrentcreatordialog.cpp  transferlistfilterswidget.cpp  transferlistfilterswidget.h  transferlistmodel.cpp  (+2 more)
src/gui/properties/: propertieswidget.cpp  propertieswidget.h  proplistdelegate.cpp  trackersadditiondlg.cpp
src/gui/rss/: CMakeLists.txt  automatedrssdownloader.cpp  rssfeedmodel.cpp  rssfeedmodel.h  rssfeedsortmodel.cpp  rssfeedsortmodel.h  rssmodel.cpp  rssmodel.h  rsssortmodel.cpp  rsssortmodel.h  rsswidget.cpp  rsswidget.h
src/gui/search/: indexeroptionsdialog.cpp  indexersdialog.cpp  indexersdialog.h  pluginselectdlg.cpp  searchjobwidget.cpp  searchjobwidget.h  searchwidget.cpp  searchwidget.h
src/webui/: btjson.cpp  prefjson.cpp  webapplication.cpp  webui.pri
src/webui/api/: appcontroller.cpp  rsscontroller.cpp  searchcontroller.cpp  searchcontroller.h  torrentscontroller.cpp
src/webui/api/serialize/: serialize_torrent.cpp
